storage/innobase/fil/fil0pagecompress.cc
@@ -111,9 +111,21 @@ fil_compress_page(
 	/* Cache to avoid change during function execution */
 	ulint comp_method = innodb_compression_algorithm;
 	ulint orig_page_type;
+	bool allocated=false;
 
 	if (encrypted) {
 		header_len += FIL_PAGE_COMPRESSION_METHOD_SIZE;
+	}
+
+	if (!out_buf) {
+		allocated = true;
+		out_buf = static_cast<byte *>(ut_malloc(UNIV_PAGE_SIZE));
+#ifdef HAVE_LZO
+		if (comp_method == PAGE_LZO_ALGORITHM) {
+			lzo_mem = static_cast<byte *>(ut_malloc(LZO1X_1_15_MEM_COMPRESS));
+			memset(lzo_mem, 0, LZO1X_1_15_MEM_COMPRESS);
+		}
+#endif
 	}
 
 	ut_ad(buf);
@@ -124,6 +136,10 @@ fil_compress_page(
 	/* read original page type */
 	orig_page_type = mach_read_from_2(buf + FIL_PAGE_TYPE);
 
+	fil_system_enter();
+	fil_space_t* space = fil_space_get_by_id(space_id);
+	fil_system_exit();
+
 	/* Let's not compress file space header or
 	extent descriptor */
 	if (orig_page_type == 0 ||
@@ -131,12 +147,9 @@ fil_compress_page(
 	    orig_page_type == FIL_PAGE_TYPE_XDES ||
 		orig_page_type == FIL_PAGE_PAGE_COMPRESSED) {
 		*out_len = len;
-		return (buf);
-	}
 
-	fil_system_enter();
-	fil_space_t* space = fil_space_get_by_id(space_id);
-	fil_system_exit();
+		goto err_exit;
+	}
 
 	/* If no compression level was provided to this table, use system
 	default level */
@@ -174,7 +187,7 @@ fil_compress_page(
 #endif
 			srv_stats.pages_page_compression_error.inc();
 			*out_len = len;
-			return (buf);
+			goto err_exit;
 		}
 		break;
 #endif /* HAVE_LZ4 */
@@ -190,9 +203,10 @@ fil_compress_page(
 					space_id, fil_space_name(space), len, err, write_size);
 				space->printed_compression_failure = true;
 			}
+
 			srv_stats.pages_page_compression_error.inc();
 			*out_len = len;
-			return (buf);
+			goto err_exit;
 		}
 
 		break;
@@ -218,9 +232,10 @@ fil_compress_page(
 					space_id, fil_space_name(space), len, err, out_pos);
 				space->printed_compression_failure = true;
 			}
+
 			srv_stats.pages_page_compression_error.inc();
 			*out_len = len;
-			return (buf);
+			goto err_exit;
 		}
 
 		write_size = out_pos;
@@ -248,9 +263,10 @@ fil_compress_page(
 					space_id, fil_space_name(space), len, err, write_size);
 				space->printed_compression_failure = true;
 			}
+
 			srv_stats.pages_page_compression_error.inc();
 			*out_len = len;
-			return (buf);
+			goto err_exit;
 		}
 		break;
 	}
@@ -270,9 +286,10 @@ fil_compress_page(
 					space_id, fil_space_name(space), len, (int)cstatus, write_size);
 				space->printed_compression_failure = true;
 			}
+
 			srv_stats.pages_page_compression_error.inc();
 			*out_len = len;
-			return (buf);
+			goto err_exit;
 		}
 		break;
 	}
@@ -293,7 +310,7 @@ fil_compress_page(
 
 			srv_stats.pages_page_compression_error.inc();
 			*out_len = len;
-			return (buf);
+			goto err_exit;
 		}
 		break;
 
@@ -339,15 +356,17 @@ fil_compress_page(
 		byte *comp_page;
 		byte *uncomp_page;
 
-		comp_page = static_cast<byte *>(ut_malloc(UNIV_PAGE_SIZE*3));
-		uncomp_page = static_cast<byte *>(ut_malloc(UNIV_PAGE_SIZE*3));
+		comp_page = static_cast<byte *>(ut_malloc(UNIV_PAGE_SIZE));
+		uncomp_page = static_cast<byte *>(ut_malloc(UNIV_PAGE_SIZE));
 		memcpy(comp_page, out_buf, UNIV_PAGE_SIZE);
 
 		fil_decompress_page(uncomp_page, comp_page, len, NULL);
+
 		if(buf_page_is_corrupted(false, uncomp_page, 0)) {
 			buf_page_print(uncomp_page, 0, BUF_PAGE_PRINT_NO_CRASH);
 			ut_error;
 		}
+
 		ut_free(comp_page);
 		ut_free(uncomp_page);
 	}
@@ -366,6 +385,8 @@ fil_compress_page(
 		size_t tmp = write_size;
 
 		write_size =  (size_t)ut_uint64_align_up((ib_uint64_t)write_size, block_size);
+		/* Clean up the end of buffer */
+		memset(out_buf+tmp, 0, write_size - tmp);
 #ifdef UNIV_DEBUG
 		ut_a(write_size > 0 && ((write_size % block_size) == 0));
 		ut_a(write_size >= tmp);
@@ -384,12 +405,30 @@ fil_compress_page(
 	/* If we do not persistently trim rest of page, we need to write it
 	all */
 	if (!srv_use_trim) {
+		memset(out_buf+write_size,0,len-write_size);
 		write_size = len;
 	}
 
 	*out_len = write_size;
 
-	return(out_buf);
+	if (allocated) {
+		/* TODO: reduce number of memcpy's */
+		memcpy(buf, out_buf, len);
+	} else {
+		return(out_buf);
+	}
+
+err_exit:
+	if (allocated) {
+		ut_free(out_buf);
+#ifdef HAVE_LZO
+		if (comp_method == PAGE_LZO_ALGORITHM) {
+			ut_free(lzo_mem);
+		}
+#endif
+	}
+
+	return (buf);
 
 }
 
@@ -432,7 +471,8 @@ fil_decompress_page(
 
 	// If no buffer was given, we need to allocate temporal buffer
 	if (page_buf == NULL) {
-		in_buf = static_cast<byte *>(ut_malloc(UNIV_PAGE_SIZE*3));
+		in_buf = static_cast<byte *>(ut_malloc(UNIV_PAGE_SIZE));
+		memset(in_buf, 0, UNIV_PAGE_SIZE);
 	} else {
 		in_buf = page_buf;
 	}
