storage/xtradb/buf/buf0buf.cc
@@ -6070,6 +6070,7 @@ buf_pool_mutex_exit(
 Reserve unused slot from temporary memory array and allocate necessary
 temporary memory if not yet allocated.
 @return reserved slot */
+UNIV_INTERN
 buf_tmp_buffer_t*
 buf_pool_reserve_tmp_slot(
 /*======================*/
